src/main/java/com/example/restapiexample/errors/BadRequestException.java
package com.example.restapiexample.errors;

public class BadRequestException extends AppException {
    public BadRequestException(AppError error) {
        super(error);
    }
}
